p2/confs/app-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    name: app1
spec:
  selector:
    name: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
