p2/confs/app-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  labels:
    name: app2
spec:
  selector:
    name: app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
