p2/confs/app-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  labels:
    name: app3
spec:
  selector:
    name: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
